test/types/unions/bad-union-init-expr.good
bad-union-init-expr.chpl:3: error: union fields cannot have initializers
