test/types/unions/bad-union-init-expr.chpl
union U {
  var x: int;
  var y: real = 2.0;
}
var u: U;
